2009-03-24  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:forObject:previousObject:toAttendees:]):
	no longer send a deletion notification to an attendee who already
	declined the meeting.

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -_eventObjectWithUID:forUser:]): when
	looking for an event for a specific user, we now search into all
	the user's calendar folders. 

2009-03-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	-_prepareDefaultMailAccounts]): return an autoreleased array to
	avoid a leak.

	* UI/Scheduler/UIxCalListingActions.m ([UIxCalListingActions
	-initWithRequest:newRequest]): retain dateFormatter, since it is
	released in -dealloc.
	([UIxCalListingActions -dealloc]): do not release startDate and
	endDate since they are not retained.

2009-03-23  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -_lookupEvent:forUID:]): when looking for
	an event for a specific user, we now search into all the user's
	calendar folders.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupCalendarFoldersForUID:]): new
	method that returns an array of a user's calendar folders
	excluding the subscriptions.

2009-03-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	-subscribe:reallyDoinTheNamesOf:delegatedUsersfromMailInvitation:isMailInvitationinContext:localContext]):
	when the user preferences didn't already contain a key matching
	the current module name, the subscriptions would not work. We thus
	create one if none exists yet.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendSystemSources]): modified the return type and returns nil,
	to match the new SOGoParentFolder definition of the method.