@@ -1,3 +1,12 @@
+2009-03-24  Ludovic Marcotte <lmarcotte@inverse.ca>
+
+	* UI/MailerUI/UIxMailListView.m
+	([UIxMailListView messages)]:
+	Adjusted the sort so it's a little bit faster
+	and correctly work in case the server returns us
+	the FETCH response in an order different that what
+	we asked for.
+
 2009-03-24  Francis Lachapelle  <flachapelle@inverse.ca>
 
 	* SoObjects/Appointments/SOGoCalendarComponent.m
